--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,20 @@
-version: '3.7'
+version: '3'
 
 services:
-
-  my-app:
-    container_name: my-app
+  web:
     build:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - '.:/app'
-      - '/app/node_modules'
+      - .:/app
+      - node_modules:/app/node_modules
+      - dist:/app/dist
     ports:
-      - '8081:8080'
+      - "8080:8080"
+    # uncomment command below to run development version
+    # command: "npm run serve"
+    command: "http-server dist"
+
+volumes:
+  node_modules:
+  dist:
